style.css
:root {
  --color-green: hsl(75, 94%, 57%);
  --color-white: hsl(0, 0%, 100%);
  --color-grey-700: hsl(0, 0%, 20%);
  --color-grey-800: hsl(0, 0%, 12%);
  --color-grey-900: hsl(0, 0%, 8%);
  --font-size-sm: 0.875rem;
  --font-family: Inter, sans-serif;
}

* {
  box-sizing: border-box;
  /* outline: 1px solid red; */
  ;
}

body {
  background-color: var(--color-grey-900);
  color: var(--color-white);
  font-family: var(--font-family);
  font-size: var(--font-size-sm);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  height: 100vh;
}

.card-container {
  width: 90vw;
  max-width: 400px;
  min-width: 320px;
  height: fit-content;
  margin: 75px auto;
  padding: 20px;
  background-color: var(--color-grey-800);
  border-radius: 15px;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}

img {
  display: blocK;
  width: 100%;
  height: 100%;
}

.avatar {
  border-radius: 50%;
  width: 35%;
  margin-block: 25px;
}

h1 {
  font-weight: 500;
  font-size: 1.5rem;
  letter-spacing: 1px;
  padding-bottom: 5px;
  margin: 0;
}

h2 {
  font-weight: 500;
  color: var(--color-green);
  font-size: var(--font-size-sm);
  padding: 0;
  margin-bottom: 15px;
}

.description {
  margin-bottom: 25px;
  color: lightgrey;
}


.button-container {
  display: flex;
  flex-direction: column;
  gap: 15px;
  align-items: center;
  width: 100%;
}

.socials {
  color: var(--color-white);
  background-color: var(--color-grey-700);
  border: none;
  border-radius: 15px;
  font-weight: 500;
  text-decoration: none;
  padding-block: 15px;
  width: 100%;
}

.socials:hover {
  background-color: var(--color-green);
  cursor: pointer;
  color: var(--color-grey-900);
}

.attribution {
  font-size: 11px;
  text-align: center;
}

.attribution a {
  color: hsl(228, 45%, 44%);
}

